--- a/pom.xml
+++ b/pom.xml
@@ -49,10 +49,10 @@
             <version>3.4.0</version>
         </dependency>
         <!--lombok-->
-<!--        <dependency>-->
-<!--            <groupId>org.projectlombok</groupId>-->
-<!--            <artifactId>lombok</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
         <!--slf4j-->
         <dependency>
             <groupId>log4j</groupId>
